@@ -1,7 +1,10 @@
 package com.hcmus.mentor.backend.domain;
 
-import com.hcmus.mentor.backend.domain.method.IRemindable;
 import com.hcmus.mentor.backend.controller.payload.request.UpdateTaskRequest;
+import com.hcmus.mentor.backend.domain.constant.ReminderType;
+import com.hcmus.mentor.backend.domain.constant.TaskStatus;
+import com.hcmus.mentor.backend.domain.dto.AssigneeDto;
+import com.hcmus.mentor.backend.domain.method.IRemindable;
 import lombok.*;
 import org.apache.commons.lang3.time.DateUtils;
 import org.springframework.data.annotation.Id;
@@ -34,7 +37,7 @@ public class Task implements IRemindable, Serializable {
     private String assignerId;
 
     @Builder.Default
-    private List<Assignee> assigneeIds = new ArrayList<>();
+    private List<AssigneeDto> assigneeIds = new ArrayList<>();
 
     @Builder.Default
     private String parentTask = "";
@@ -44,8 +47,8 @@ public class Task implements IRemindable, Serializable {
     @Builder.Default
     private Date createdDate = new Date();
 
-    public static Task.Assignee newTask(String userId) {
-        return new Task.Assignee(userId, Task.Status.TO_DO);
+    public static AssigneeDto newTask(String userId) {
+        return new AssigneeDto(userId, TaskStatus.TO_DO);
     }
 
     @Override
@@ -62,7 +65,7 @@ public class Task implements IRemindable, Serializable {
         return Reminder.builder()
                 .groupId(groupId)
                 .name(title)
-                .type(Reminder.ReminderType.TASK)
+                .type(ReminderType.TASK)
                 .reminderDate(getReminderDate())
                 .properties(properties)
                 .remindableId(id)
@@ -95,7 +98,7 @@ public class Task implements IRemindable, Serializable {
     }
 
     public List<String> getAllAssigneeIds() {
-        return assigneeIds.stream().map(Assignee::getUserId).collect(Collectors.toList());
+        return assigneeIds.stream().map(AssigneeDto::getUserId).toList();
     }
 
     public void update(UpdateTaskRequest request) {
@@ -109,7 +112,7 @@ public class Task implements IRemindable, Serializable {
             this.setDeadline(request.getDeadline());
         }
         if (request.getUserIds() != null) {
-            List<Task.Assignee> assignees =
+            List<AssigneeDto> assignees =
                     assigneeIds.stream()
                             .filter(assignee -> request.getUserIds().contains(assignee.getUserId()))
                             .collect(Collectors.toList());
@@ -117,7 +120,7 @@ public class Task implements IRemindable, Serializable {
                     .filter(userId -> !getAllAssigneeIds().contains(userId))
                     .forEach(
                             userId -> {
-                                assignees.add(Assignee.builder().userId(userId).build());
+                                assignees.add(AssigneeDto.builder().userId(userId).build());
                             });
             this.setAssigneeIds(assignees);
         }
@@ -126,23 +129,4 @@ public class Task implements IRemindable, Serializable {
         }
     }
 
-    public enum Status {
-        TO_DO,
-        IN_PROGRESS,
-        DONE,
-        OVERDUE
-    }
-
-    @Getter
-    @Setter
-    @AllArgsConstructor
-    @NoArgsConstructor
-    @Builder
-    public static class Assignee implements Serializable {
-
-        private String userId;
-
-        @Builder.Default
-        private Status status = Status.TO_DO;
-    }
 }
